Send json instead of text. Improved UI

--- a/ui-react/style/style.css
+++ b/ui-react/style/style.css
@@ -1,3 +1,15 @@
 form a {
     margin-left: 5px;
 }
+
+.details {
+    margin-top: 20px;
+}
+
+.reviews {
+    margin-top: 20px;
+}
+
+.error {
+    color: crimson;
+}
